[workspace]
resolver = "2"
members = [
    "fenwick",
    "segment_tree",
    "union_find",
    "trie",
    "multiset",
    "sorted_list",
    "math",
    "bfs",
    "dfs",
    "dijkstra",
    "top_sort",
    "binary_tree",
    "bst",
    "interval_tree",
    "rolling_hash",
    "bit_manipulation",
    "mo_algorithm",
    "sparse_table",
    "heavy_light_decomposition",
    "centroid_decomposition",
    "suffix_automaton",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
lto = "thin"
codegen-units = 1
